packages/navigation/src/components/less/ContainerTitle.less
@import '~@atlaskit/util-shared-styles/src/colors.less';
@import '~@atlaskit/util-shared-styles/src/grid.less';
@import '../../shared-variables.less';

@icon-size: @ak-grid-size * 5;

.containerTitle {
  display: flex;
  align-items: center;
  align-content: center;
  padding-bottom: @ak-grid-size * 0.5;
}

.link {
  text-decoration: none;

  &:hover {
    color: @ak-color-N400;
    text-decoration: none;
  }
}

.icon {
  width: @icon-size;
  height: @icon-size;
}

.icon > * {
  width: @icon-size;
  height: @icon-size;
  border-radius: 4px;
}

.textContainer {
  margin-left: @ak-grid-size;

  [data-__ak-navigation-container-closed="true"] & {
    display: none;
  }
}

.text {
  color: @ak-color-N500;
  font-weight: 500;
}

.subText {
  color: @ak-color-N300;
}

